--- a/templates/nginx.conf
+++ b/templates/nginx.conf
@@ -24,7 +24,7 @@ http {
       proxy_set_header X-Forwarded-Host $host;
       proxy_set_header X-Forwarded-Proto $scheme;
       proxy_set_header X-Forwarded-Port $server_port;
-      proxy_pass http://{DOMAIN}:8585;
+      proxy_pass https://{DOMAIN}:8585;
     }
   }
 }
