--- a/templates/nginx.conf
+++ b/templates/nginx.conf
@@ -15,7 +15,7 @@ http {
 
     ssl_certificate /etc/nginx/certs/{DOMAIN}.crt;
     ssl_certificate_key /etc/nginx/certs/{DOMAIN}.key;
-    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
 
     location / {
@@ -24,7 +24,7 @@ http {
       proxy_set_header X-Forwarded-Host $host;
       proxy_set_header X-Forwarded-Proto $scheme;
       proxy_set_header X-Forwarded-Port $server_port;
-      proxy_pass https://{DOMAIN}:8585;
+      proxy_pass http://wp:8282;
     }
   }
 }
